--- a/templates/default.mustache
+++ b/templates/default.mustache
@@ -1,8 +1,9 @@
+# Adapted for base16-universal-manager
 # base16-fish-shell (https://github.com/FabioAntunes/base16-fish-shell)
 # Inspired by base16-shell (https://github.com/chriskempson/base16-shell)
 # {{scheme-name}} scheme by {{scheme-author}}
 
-function base16-{{scheme-slug}} -d "base16 {{scheme-name}} theme"
+function base16-universal-default -d "base16 {{scheme-name}} theme"
     set options (fish_opt --short=t --long=test)
     argparse $options -- $argv
 
